test/classes/delete-free/anymanaged/nilable-anymanaged-member-no-given-value.good
nilable-anymanaged-member-no-given-value.chpl:2: warning: field with generic declared type
nilable-anymanaged-member-no-given-value.chpl:7: error: initialization requires an argument for thing2
