test/classes/delete-free/anymanaged/nilable-anymanaged-member-no-given-value.chpl
class Thing1 {
  var thing2: Thing2?;
}

class Thing2 {}

var thing1 = new Thing1();

writeln(thing1);
